# sus-compiler

./: .gitattributes  .gitignore  .gitmodules  .vimrc_example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KNOWN_SIMULATOR_BUGS.md  Package.swift  README.md  bad_syntax.sus  binding.gyp  bitSerialMatrixMultiply.sus  build.rs  build_lsp.sh  build_wasm.sh  clear_fixed_panics.sh  core.sus  countConnectedCore.sus  coverage.sh  errorCodes.md  grammar.js  make_docs.sh  make_docs_local.sh  miri.sh  multiply_add.sus  multiply_add.vpp  package.json  playground.sh  pyproject.toml  resetNormalizer.sus  rustfmt.toml  simSUS.sh  slidesExampleCode.sus  test.sh  test.sus  test.sus_codegen.sv  test.sus_errors.txt  test.sus_output.txt  test.sus_regression.sh  (+8 more)
.github/workflows/: ci.yml  rust.yml
bindings/go/: binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_sus/: binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterSus/: sus.h
docs/: debug.md
philosophy/: combinatorial_dependency.md  compiletime_and_runtime.md  control_flow.md  design_decisions.md  instantiation.md  interfaces.md  latency.md  library.md  nightlyIdeas.md  optimization.md  safety.md  standardlibrary.md  state.md  state_v_latency.md  template_troubles.md  tensions.md  tree_sitter.md  types.md
philosophy/images/: actionsQueriesTriggers.drawio  barrel_shift.drawio  basicMux.drawio  bitSerialMatMul.drawio  bitSerialRow.drawio  bramShiftReg.drawio  combinatorialLogic.drawio  example.drawio  fifoExample.drawio  fifoImpl.drawio  fifoWriteExample.drawio  fifoWritePort.drawio  fizzBuzz.drawio  generativeFizzBuzz.drawio  inferableIllustration.drawio  insertRegisters.drawio  latency.drawio  latencyCountingExample.drawio  latencyInfoTravelsDown.drawio  latencyInfoTravelsUp.drawio  latencySpecifiers.drawio  latency_offset.drawio  matrixIndexing.drawio  matrix_vec_mul.drawio  multiDomain.drawio  multiStateWhileLoop.drawio  multipleInterfaces.drawio  muxExample.drawio  negativeBackedgeConcept.drawio  nonDeterminism.drawio  orGate.drawio  rebase.drawio  rule110.drawio  state.drawio  stateRegs.drawio  susArchitecture.drawio  susLogo.drawio  sus_for_loops.drawio  treeAdd.drawio  xorGates.drawio
platform/fallback/: memory.sus
platform/xilinx/: xpm.sus  xpm.sv
src/: abstract_type.rs  alloc.rs  append_only_vec.rs  arena_alloc.rs  ast.rs  block_vector.rs  codegen.rs  codegen_fallback.rs  compiler_top.rs  concrete_type.rs  config.rs  debug.rs  errors.rs  file_position.rs  flattening.rs  global_context.rs  grammar.json  instantiation.rs  linker.rs  list_of_lists.rs  main.rs  node-types.json  parser.c  parser.rs  prelude.rs  template.rs  testFile.v  to_string.rs  tokenizer.rs  typing.rs  util.rs  value.rs
src/code_generation/: mod.rs
src/codegen/: mod.rs  patches.rs  shared.rs  sv_utils.rs  system_verilog.rs  vhdl.rs
src/dev_aid/: ariadne_interface.rs  dot_graphs.rs  gen_docs.rs  lsp.rs  mod.rs  port_diagram.rs  syntax_highlighting.rs  tree_walk.rs
src/dev_aid/lsp/: completions.rs  hover_info.rs  mod.rs  semantic_tokens.rs  tree_walk.rs  uri_patch.rs
src/flattening/: domain_check.rs  flatten.rs  initialization.rs  lints.rs  mod.rs  name_context.rs  parse.rs  parser.rs  port_latency_inference.rs  typechecking.rs  walk.rs
src/flattening/typecheck/: clock_check.rs  domain_check.rs  lints.rs  mod.rs  type_check.rs
src/instantiation/: builtins.rs  clocks.rs  concrete_typecheck.rs  execute.rs  final_checks.rs  instantiation_cache.rs  instantiator.rs  latency.rs  latency_algorithm.rs  latency_count.rs  list_of_lists.rs  mod.rs  typecheck.rs  unique_names.rs
src/latency/: dot_graph.rs  latency_algorithm.rs  list_of_lists.rs  mod.rs  port_latency_inference.rs
src/linker/: checkpoint.rs  mod.rs  passes.rs  resolver.rs
src/lsp/: mod.rs  syntax_highlighting.rs
src/typing/: abstract_type.rs  abstract_unifier.rs  concrete_type.rs  delayed_constraint.rs  domain_type.rs  mod.rs  set_unifier.rs  template.rs  ty_cell.rs  type_inference.rs  unifyable_cell.rs  value_unifier.rs  written_type.rs
std/: array.sus  bitwise.sus  control_flow.sus  conversion.sus  core.sus  fifo.sus  math.sus  memory.sus  native_popcount.sv  util.sus
std/feature/xpm/: memory.sus  xpm.sus  xpm_cdc.sus  xpm_fifo.sus  xpm_memory.sus
stl/: core.sus  util.sus
sus-proc-macro/: Cargo.toml  README.md
sus-proc-macro/src/: lib.rs
sus_proc_macro/: Cargo.toml
sus_proc_macro/src/: lib.rs
tests/: .gitignore
tests/arrays/: array_tests.sus  harness.sv  run.sh  sim.tcl
tests/fifos/: fifo_tests.sus  harness_fifo.sv  harness_fwft.sv  run.sh  sim.tcl
tests/signed_integers/: .gitignore  harness.sv  run.sh  signed_int_tests.sus  sim.tcl
tree-sitter-sus/: .gitignore  Cargo.toml  Makefile  binding.gyp  grammar.js  package.json  setup.py  tree-sitter.json  tree.sh
tree-sitter-sus/bindings/c/: tree-sitter-sus.pc.in
tree-sitter-sus/bindings/go/: binding.go
tree-sitter-sus/bindings/python/tree_sitter_sus/: __init__.py
tree-sitter-sus/bindings/rust/: lib.rs
tree-sitter-sus/src/: grammar.json  node-types.json  parser.c
verilog_output/: .gitignore
