[package]
name = "sus_compiler"
description = "Compiler for the SUS Hardware Design Language"
version = "0.0.1"
authors = ["VonTum <lennart.vanhirtum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/pc2/sus-compiler"
keywords = ["sus", "fpga", "vlsi", "verilog", "hdl"]
categories = ["compilers", "text-processing"]
readme = "README.md"

[workspace]
members = [
    "sus-proc-macro",
    "tree-sitter-sus"
]

[dependencies]
# console = "0.15.7" # for terminal colors
# chumsky = "0.9.2"
ariadne = "0.4.1" # for nice errors
num = "*"

# Tree sitter
tree-sitter = "~0.22.2"
tree-sitter-sus = {version = "~0.0.2", path = "./tree-sitter-sus"}

sus-proc-macro = {version = "~0.0.1", path = "./sus-proc-macro"}

# calyx-ir = {version = "0.6.1", optional = true}
# calyx-opt = {version = "0.6.1", optional = true}
# calyx-backend = {version = "0.6.1", optional = true}

# moore-circt = {version = "0.14.0", optional = true, path = "/home/lennart/Desktop/moore/src/circt"}
# moore-circt-sys = {version = "0.14.0", optional = true, path = "/home/lennart/Desktop/moore/src/circt-sys"}
# moore-circt = {version = "0.14.0", optional = true}
# moore-circt-sys = {version = "0.14.0", optional = true}

#lsp
lsp-server = {version = "0.7.1", optional = true}
lsp-types = {version = "0.94.0", optional = true}
serde_json = {version = "1.0.97", optional = true}
serde = {version = "1.0.156", optional = true}

[features]
default = ["lsp"]

lsp = ["lsp-server", "lsp-types", "serde_json", "serde"]
# codegen = ["calyx-ir", "calyx-opt", "calyx-backend"]
# codegen = ["moore-circt-sys", "moore-circt"]

[profile.release]
debug = true
