[package]
name = "sus_compiler"
description = "Compiler for the SUS Hardware Design Language"
version = "0.3.5"
authors = ["Lennart Van Hirtum <lennart.vanhirtum@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/pc2/sus-compiler"
homepage = "https://github.com/pc2/sus-compiler"
readme = "README.md"
keywords = ["sus", "fpga", "vlsi", "hdl", "verilog"]
categories = ["compilers", "text-processing"]
edition = "2024"
rust-version = "1.88"

include = ["/src", "/std/*", "/README.md", "/LICENSE", "/CHANGELOG.md", "/build.rs", "/rustfmt.toml"]

[workspace]
members = [
    "sus-proc-macro",
    "tree-sitter-sus"
]

[dependencies]
# console = "0.15.7" # for terminal colors
# chumsky = "0.9.2"
ariadne = "0.5.1" # for nice errors
ibig = { version = "0.3.6", default-features = false, features = ["std"] }
clap = { version = "4.5.21", features = ["derive", "wrap_help"] }
circular-buffer = "0.1.9"
chrono = "0.4.19"
rand = "0.9.1"
typed-arena = "2.0.2"
colored = "3.0.0"
replace_with = "0.1.8"
ordered-float = "5.0.0"
dtoa = "1.0.10"
log = "0.4"
env_logger = {version = "0.11", default-features = false, features = ["auto-color"]}
unescape = "0.1"

# Tree sitter
tree-sitter = "0.25"
tree-sitter-sus = {version = "~0.3.5", path = "./tree-sitter-sus"}

sus-proc-macro = {version = "~0.3.5", path = "./sus-proc-macro"}

# calyx-ir = {version = "0.6.1", optional = true}
# calyx-opt = {version = "0.6.1", optional = true}
# calyx-backend = {version = "0.6.1", optional = true}

# moore-circt = {version = "0.14.0", optional = true, path = "/home/lennart/Desktop/moore/src/circt"}
# moore-circt-sys = {version = "0.14.0", optional = true, path = "/home/lennart/Desktop/moore/src/circt-sys"}
# moore-circt = {version = "0.14.0", optional = true}
# moore-circt-sys = {version = "0.14.0", optional = true}

#lsp
lsp-server = {version = "0.7.1", optional = true}
lsp-types = {version = "0.94.0", optional = true}
serde_json = {version = "1.0.97", optional = true}
serde = {version = "1.0.156", optional = true}

[build-dependencies]
dirs = "6.0.0"
chrono = "0.4.19"

[features]
default = ["lsp"]

lsp = ["lsp-server", "lsp-types", "serde_json", "serde"]
# codegen = ["calyx-ir", "calyx-opt", "calyx-backend"]
# codegen = ["moore-circt-sys", "moore-circt"]

[profile.release]
debug = true

[profile.smol]
debug = false
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'
inherits = "release"
