[package]
name = "sus-proc-macro"
description = "Proc-macros for use in the sus-compiler"
version = "0.3.0-devel"
authors = ["Lennart Van Hirtum <lennart.vanhirtum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/pc2/sus-compiler"
homepage = "https://github.com/pc2/sus-compiler"
readme = "README.md"
keywords = ["sus", "fpga", "hdl", "proc-macro", "tree-sitter"]
categories = ["compilers", "text-processing"]
rust-version = "1.78"

[dependencies]

# Tree sitter
tree-sitter = "~0.24.7"
tree-sitter-sus = {version = "~0.2.0", path = "../tree-sitter-sus"}
regex = "1.11.1"

# proc_macro utils
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
