[package]
name = "sus-proc-macro"
description = "Proc-macros for use in the sus-compiler"
version = "0.3.1-devel"
authors = ["Lennart Van Hirtum <lennart.vanhirtum@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/pc2/sus-compiler"
homepage = "https://github.com/pc2/sus-compiler"
readme = "README.md"
keywords = ["sus", "fpga", "hdl", "proc-macro", "tree-sitter"]
categories = ["compilers", "text-processing"]
edition = "2024"

[dependencies]

# Tree sitter
tree-sitter = "0.25"
tree-sitter-sus = {version = "~0.3.1-devel", path = "../tree-sitter-sus"}
regex = "1.11.1"

# proc_macro utils
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
