[package]
name = "sus_proc_macro"
version = "0.0.1"
authors = ["VonTum <lennart.vanhirtum@gmail.com>"]
edition = "2021"
repository = "https://github.com/pc2/sus-compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Tree sitter
tree-sitter = "~0.22.2"
tree-sitter-sus = {path = "../tree-sitter-sus"}

# proc_macro utils
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
