[package]
name = "tree-sitter-sus"
authors = ["Lennart Van Hirtum <lennart.vanhirtum@gmail.com>"]
description = "sus grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "sus"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pc2/sus-compiler"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/pc2/sus-compiler"
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.24.7"

[build-dependencies]
cc = "1.1"
